# obsidian-analyzer

./: .gitignore  README.md  build_ai_testing_platform.zsh  build_autolink.zsh  build_multifolder.zsh  build_test_system.zsh  content_gaps.md  debug_ai_response.py  multi_analyzer.py  pyproject.toml  pytest.ini  requirements.txt  semantic_report.md
.codex/: setup.sh
examples/: basic_usage.py  multi_folder_example.py
obsidian_analyzer/: __init__.py  ai_semantic_linker.py  analyzer.py  auto_linker.py  content_gap_analyzer.py  init.py  models.py  multi_analyzer.py  safe_auto_linker.py
obsidian_safe_backups/safe_backup_20250529_081006/: metadata.json
obsidian_safe_backups/safe_backup_20250529_081006/Coding/: Modern Python Project Setup Guide (2025).md  Obsidian Analyzer notes.md  Python Hygiene.md  The PARA-ish + MOCs System.md
reports/: vault_analysis_20250529_074439.md  vault_analysis_20250529_074516.md  vault_analysis_20250529_074546.md
scripts/: ai_health_check.py  ai_safe_auto_link.py  ai_semantic_analysis.py  analyze_vault.py  auto_link.py  content_gap_analysis.py  health_check.py  safe_auto_link.py  watch_tests.py
tests/: conftest.py
tests/ai/: test_ai_integration.py  test_ai_performance.py  test_ai_semantic_linker.py  test_content_gap_analyzer.py
tests/fixtures/ai_responses/: semantic_connections.json
tests/integration/: test_full_workflow.py  test_performance.py
tests/mocks/: mock_openai.py
tests/reports/: health_report.json
tests/unit/: test_analyzer.py  test_auto_linker.py  test_models.py  test_multi_analyzer.py
