[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-analyzer"
version = "0.1.0"
description = "Analyze and improve Obsidian vault structure and linking"
authors = [{name = "Jason Soroko"}]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "faker>=35.2.2",
    "openai>=1.82.0",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.1",
    "responses>=0.25.7",
    "watchdog>=4.0.2",
]

[project.optional-dependencies]
dev = [
   "pytest>=7.0.0",
   "black>=22.0.0",
   "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["obsidian_analyzer*"]
exclude = ["reports*", "scripts*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
